[gd_scene load_steps=48 format=3 uid="uid://cthhku8fsrdeq"]

[ext_resource type="Texture2D" uid="uid://bolfnamab5iio" path="res://Sprites/Office/office.png" id="1_nilh1"]
[ext_resource type="Script" path="res://Scripts/Night/office_scroll.gd" id="2_okpib"]
[ext_resource type="Shader" path="res://Shaders/equirectangular_perspective.gdshader" id="3_t06hd"]
[ext_resource type="Script" path="res://Scripts/Night/Camera/tablet_button.gd" id="4_0ml6l"]
[ext_resource type="Texture2D" uid="uid://dwyslxvb0bomm" path="res://Sprites/Tablet/tablet_anim.png" id="4_q88ar"]
[ext_resource type="Texture2D" uid="uid://doij14ckrfbcd" path="res://Sprites/HUD/bar_click.png" id="5_fh64q"]
[ext_resource type="Texture2D" uid="uid://drdovhb6vjnqk" path="res://Sprites/CamRooms/room1.png" id="6_eiyrw"]
[ext_resource type="Script" path="res://Scripts/Night/Camera/cam_switching.gd" id="6_sfjgy"]
[ext_resource type="Texture2D" uid="uid://co8fp3b71x2mf" path="res://Sprites/CamRooms/room2.png" id="7_6isfp"]
[ext_resource type="Texture2D" uid="uid://4petupilp2sn" path="res://Sprites/CamRooms/room3.png" id="8_a0gfj"]
[ext_resource type="Texture2D" uid="uid://xlt2d5gkavy2" path="res://Sprites/CamRooms/room4.png" id="9_bm1o6"]
[ext_resource type="Texture2D" uid="uid://ccnjx3c7odf8u" path="res://Sprites/HUD/r_buttons.png" id="10_2355y"]
[ext_resource type="Texture2D" uid="uid://dc67eesh5l50u" path="res://Sprites/Static/static_anim.png" id="12_e8sbt"]
[ext_resource type="Texture2D" uid="uid://du8v8n577r5of" path="res://Sprites/HUD/map.png" id="13_s5lq5"]
[ext_resource type="AnimationNodeBlendTree" uid="uid://siq8sv1mpgct" path="res://AnimationTree/animtree_camera.tres" id="14_spxkt"]
[ext_resource type="Script" path="res://Scripts/Night/chara_ai.gd" id="15_1ap1l"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7mfac"]
atlas = ExtResource("4_q88ar")
region = Rect2(0, 0, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_og3cr"]
atlas = ExtResource("4_q88ar")
region = Rect2(1280, 0, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwr0d"]
atlas = ExtResource("4_q88ar")
region = Rect2(2560, 0, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_qq406"]
atlas = ExtResource("4_q88ar")
region = Rect2(0, 720, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_gx02k"]
atlas = ExtResource("4_q88ar")
region = Rect2(1280, 720, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbvoi"]
atlas = ExtResource("4_q88ar")
region = Rect2(2560, 720, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_apvsr"]
atlas = ExtResource("4_q88ar")
region = Rect2(0, 1440, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_vyt5j"]
atlas = ExtResource("4_q88ar")
region = Rect2(1280, 1440, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_go6vm"]
atlas = ExtResource("4_q88ar")
region = Rect2(2560, 1440, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_3g532"]
atlas = ExtResource("4_q88ar")
region = Rect2(0, 2160, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bqcj"]
atlas = ExtResource("4_q88ar")
region = Rect2(1280, 2160, 1280, 720)

[sub_resource type="SpriteFrames" id="SpriteFrames_5t1j5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mfac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_og3cr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwr0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qq406")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gx02k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbvoi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apvsr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vyt5j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_go6vm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3g532")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bqcj")
}],
"loop": false,
"name": &"lift",
"speed": 60.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_y1mul"]
atlas = ExtResource("10_2355y")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrm77"]
atlas = ExtResource("10_2355y")
region = Rect2(96, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_us2yt"]
atlas = ExtResource("10_2355y")
region = Rect2(0, 32, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qe3yf"]
atlas = ExtResource("10_2355y")
region = Rect2(96, 32, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lcwij"]
atlas = ExtResource("10_2355y")
region = Rect2(0, 64, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_60mtv"]
atlas = ExtResource("10_2355y")
region = Rect2(96, 64, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_deh3i"]
atlas = ExtResource("10_2355y")
region = Rect2(0, 96, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbcdr"]
atlas = ExtResource("10_2355y")
region = Rect2(96, 96, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdjs7"]
atlas = ExtResource("12_e8sbt")
region = Rect2(0, 0, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxdbk"]
atlas = ExtResource("12_e8sbt")
region = Rect2(0, 720, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_fg3p6"]
atlas = ExtResource("12_e8sbt")
region = Rect2(0, 1440, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1lch"]
atlas = ExtResource("12_e8sbt")
region = Rect2(0, 2160, 1280, 720)

[sub_resource type="SpriteFrames" id="SpriteFrames_1ioo0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdjs7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxdbk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fg3p6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1lch")
}],
"loop": true,
"name": &"default",
"speed": 25.0
}]

[sub_resource type="Animation" id="Animation_yiym4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cam_Rooms/room_1:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 1280, 2880)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cam_Rooms/room_2:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(320, 0, 1280, 2880)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Cam_Rooms/room_3:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 1280, 1440)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Cam_Rooms/room_4:region_rect")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(320, 0, 1280, 1440)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Cam_HUD/static:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.392157)]
}

[sub_resource type="Animation" id="Animation_33l2s"]
resource_name = "cam_scroll"
length = 16.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cam_Rooms/room_1:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(3, 5, 11, 13),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Rect2(0, 0, 1280, 2880), Rect2(0, 0, 1280, 2880), Rect2(320, 0, 1280, 2880), Rect2(320, 0, 1280, 2880)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cam_Rooms/room_2:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2, 8, 10),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Rect2(320, 0, 1280, 2880), Rect2(320, 0, 1280, 2880), Rect2(0, 0, 1280, 2880), Rect2(0, 0, 1280, 2880)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Cam_Rooms/room_3:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2, 4, 10, 12),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Rect2(0, 0, 1280, 1440), Rect2(0, 0, 1280, 1440), Rect2(320, 0, 1280, 1440), Rect2(320, 0, 1280, 1440)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Cam_Rooms/room_4:region_rect")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(6, 8, 14, 16),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Rect2(320, 0, 1280, 1440), Rect2(320, 0, 1280, 1440), Rect2(0, 0, 1280, 1440), Rect2(0, 0, 1280, 1440)]
}

[sub_resource type="Animation" id="Animation_kche4"]
resource_name = "static_boot"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cam_HUD/static:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.392157)]
}

[sub_resource type="Animation" id="Animation_06ke1"]
resource_name = "static_idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cam_HUD/static:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 1, 1.3, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.235294), Color(1, 1, 1, 0.235294), Color(1, 1, 1, 0.235294), Color(1, 1, 1, 0.313726), Color(1, 1, 1, 0.235294)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gkfmd"]
_data = {
"RESET": SubResource("Animation_yiym4"),
"cam_scroll": SubResource("Animation_33l2s"),
"static_boot": SubResource("Animation_kche4"),
"static_idle": SubResource("Animation_06ke1")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kco4d"]
shader = ExtResource("3_t06hd")
shader_parameter/fov = 0.4
shader_parameter/x_stretch = 70.0
shader_parameter/y_stretch = 32.0

[node name="Night" type="Node2D"]

[node name="Office" type="Sprite2D" parent="."]
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_nilh1")
centered = false
offset = Vector2(-360, 0)
script = ExtResource("2_okpib")

[node name="Tablet_Elements" type="Node2D" parent="."]
z_index = 15
position = Vector2(960, 540)
scale = Vector2(1.5, 1.5)
script = ExtResource("4_0ml6l")
path_cam_stuff = NodePath("../Camera_Elements")

[node name="Tablet_Sprite" type="AnimatedSprite2D" parent="Tablet_Elements"]
visible = false
sprite_frames = SubResource("SpriteFrames_5t1j5")
animation = &"lift"

[node name="Tablet_Button" type="TextureButton" parent="Tablet_Elements"]
modulate = Color(1, 1, 1, 0.290196)
z_index = 2
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -320.0
offset_top = 290.0
offset_right = 320.0
offset_bottom = 361.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("5_fh64q")

[node name="Camera_Elements" type="Node2D" parent="."]
visible = false
z_index = 16
script = ExtResource("6_sfjgy")

[node name="Cam_Rooms" type="Node2D" parent="Camera_Elements"]

[node name="room_1" type="Sprite2D" parent="Camera_Elements/Cam_Rooms"]
scale = Vector2(1.5, 1.5)
texture = ExtResource("6_eiyrw")
centered = false
vframes = 4
region_enabled = true
region_rect = Rect2(0, 0, 1280, 2880)

[node name="room_2" type="Sprite2D" parent="Camera_Elements/Cam_Rooms"]
visible = false
scale = Vector2(1.5, 1.5)
texture = ExtResource("7_6isfp")
centered = false
vframes = 4
region_enabled = true
region_rect = Rect2(320, 0, 1280, 2880)

[node name="room_3" type="Sprite2D" parent="Camera_Elements/Cam_Rooms"]
visible = false
scale = Vector2(1.5, 1.5)
texture = ExtResource("8_a0gfj")
centered = false
vframes = 2
region_enabled = true
region_rect = Rect2(0, 0, 1280, 1440)

[node name="room_4" type="Sprite2D" parent="Camera_Elements/Cam_Rooms"]
visible = false
scale = Vector2(1.5, 1.5)
texture = ExtResource("9_bm1o6")
centered = false
vframes = 2
region_enabled = true
region_rect = Rect2(320, 0, 1280, 1440)

[node name="Cam_Buttons" type="Node2D" parent="Camera_Elements"]
z_index = 1

[node name="room_1" type="TextureButton" parent="Camera_Elements/Cam_Buttons"]
offset_left = 1532.0
offset_top = 542.0
offset_right = 1580.0
offset_bottom = 574.0
scale = Vector2(1.5, 1.5)
action_mode = 0
texture_normal = SubResource("AtlasTexture_y1mul")
texture_disabled = SubResource("AtlasTexture_lrm77")

[node name="room_2" type="TextureButton" parent="Camera_Elements/Cam_Buttons"]
offset_left = 1526.0
offset_top = 685.0
offset_right = 1574.0
offset_bottom = 717.0
scale = Vector2(1.5, 1.5)
action_mode = 0
texture_normal = SubResource("AtlasTexture_us2yt")
texture_disabled = SubResource("AtlasTexture_qe3yf")

[node name="room_3" type="TextureButton" parent="Camera_Elements/Cam_Buttons"]
offset_left = 1280.0
offset_top = 640.0
offset_right = 1328.0
offset_bottom = 672.0
scale = Vector2(1.5, 1.5)
action_mode = 0
texture_normal = SubResource("AtlasTexture_lcwij")
texture_disabled = SubResource("AtlasTexture_60mtv")

[node name="room_4" type="TextureButton" parent="Camera_Elements/Cam_Buttons"]
offset_left = 1643.0
offset_top = 916.0
offset_right = 1691.0
offset_bottom = 948.0
scale = Vector2(1.5, 1.5)
action_mode = 0
texture_normal = SubResource("AtlasTexture_deh3i")
texture_disabled = SubResource("AtlasTexture_lbcdr")

[node name="Cam_HUD" type="Node2D" parent="Camera_Elements"]
scale = Vector2(1.5, 1.5)

[node name="static" type="AnimatedSprite2D" parent="Camera_Elements/Cam_HUD"]
modulate = Color(1, 1, 1, 0.392157)
sprite_frames = SubResource("SpriteFrames_1ioo0")
autoplay = "default"
centered = false

[node name="map" type="Sprite2D" parent="Camera_Elements/Cam_HUD"]
position = Vector2(1070, 510)
texture = ExtResource("13_s5lq5")

[node name="cam_edge" type="ReferenceRect" parent="Camera_Elements/Cam_HUD"]
offset_left = 10.0
offset_top = 10.6667
offset_right = 1270.0
offset_bottom = 710.667
mouse_filter = 2
border_color = Color(1, 1, 1, 1)
border_width = 2.0
editor_only = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera_Elements"]
libraries = {
"": SubResource("AnimationLibrary_gkfmd")
}

[node name="AnimationTree" type="AnimationTree" parent="Camera_Elements"]
tree_root = ExtResource("14_spxkt")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/Add2/add_amount = 1.0

[node name="CharacterAI" type="Node2D" parent="."]
script = ExtResource("15_1ap1l")

[node name="FreddyTimer" type="Timer" parent="CharacterAI"]
wait_time = 3.02
autostart = true

[node name="BonnieTimer" type="Timer" parent="CharacterAI"]
wait_time = 4.97
autostart = true

[node name="Perspective_Effect" type="ColorRect" parent="."]
z_index = 14
material = SubResource("ShaderMaterial_kco4d")
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 2

[connection signal="animation_finished" from="Tablet_Elements/Tablet_Sprite" to="Tablet_Elements" method="_tablet_animation_finished"]
[connection signal="mouse_entered" from="Tablet_Elements/Tablet_Button" to="Tablet_Elements" method="on_mouse_enter"]
[connection signal="mouse_exited" from="Tablet_Elements/Tablet_Button" to="Tablet_Elements" method="on_mouse_exit"]
[connection signal="pressed" from="Tablet_Elements/Tablet_Button" to="Tablet_Elements" method="_on_click"]
[connection signal="pressed" from="Camera_Elements/Cam_Buttons/room_1" to="Camera_Elements" method="_on_click_cam" binds= [0]]
[connection signal="pressed" from="Camera_Elements/Cam_Buttons/room_2" to="Camera_Elements" method="_on_click_cam" binds= [1]]
[connection signal="pressed" from="Camera_Elements/Cam_Buttons/room_3" to="Camera_Elements" method="_on_click_cam" binds= [2]]
[connection signal="pressed" from="Camera_Elements/Cam_Buttons/room_4" to="Camera_Elements" method="_on_click_cam" binds= [3]]
[connection signal="timeout" from="CharacterAI/FreddyTimer" to="CharacterAI" method="_char_timer_timeout" binds= [1]]
[connection signal="timeout" from="CharacterAI/BonnieTimer" to="CharacterAI" method="_char_timer_timeout" binds= [0]]
